<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Entrez Sequence</string>
	<string name="app_name_welcome">Welcome</string>
	<string name="app_name_my_search">My Searches</string>
	<string name="app_name_my_sequence">My Sequences</string>
	<string name="app_name_sequence_detail">Sequence</string>
	<string name="app_name_sort">Sort By</string>

	<string name="search">Search</string>
	<string name="clear">Clear</string>
	<string name="loading">Loading...</string>
	<string name="go">Go!</string>
	<string name="run">Run</string>

	<string name="url_root">http://www.bioinfomobile.com</string>
	<string name="url_pubchem_device">/m/pubmed/doDevice.php</string>

	<string name="menu_back">Back</string>
	<string name="menu_my_search">My Searches</string>
	<string name="menu_my_sequence">My Sequences</string>

	<string name="menu_save_sequence">Save</string>
	<string name="menu_email_sequence">Email</string>
	<string name="menu_save_sequences">Save sequences</string>
	<string name="menu_email_sequences">Email sequencs</string>
	<string name="menu_sort_sequence">Sort</string>
	<string name="menu_save_search">Save Search</string>

	<string name="menu_select_all">Select All</string>
	<string name="menu_delete">Delete</string>
	
	
	<string name="main_term_hint"> e.g. hiv </string>
	<string name="main_dna">Nucleotide</string>
	<string name="main_protein">Protein</string>
	<string name="main_exclude">Exclude</string>
	<string name="main_molecule">Molecule</string>
	<string name="main_gene_location">Gene Location:</string>
	<string name="main_seg_seq">Segmented Sequences</string>
	<string name="main_seq_source">Only from</string>
	<string name="main_pub_date">Published in the last </string>
	<string name="main_mod_date">Modified in the last </string>
	
	<string name="main_exclude_sts">STSs</string>
	<string name="main_exclude_wd">working draft </string>
	<string name="main_exclude_tpa">TPA</string>
	<string name="main_exclude_patent">patents  </string>
	
	<string name="list_sequence_result">Results</string>
	<string name="list_row_result">results  </string>
	
	<string name="sort_by_title">  By title</string>
	<string name="sort_by_gi">  By GI</string>
	<string name="sort_by_length">  By sequence length</string>
	<string name="sort_by_locus">  By accession</string>
	
	<string name="welcome_title">Tips</string>
	
</resources>
